# PacktIntroToRust

./: .gitignore  README.md
HelloRobot/: Cargo.toml
HelloRobot/src/: for.rs  loop.rs  robot.rs  while.rs
finishing_touches/: Cargo.toml
finishing_touches/src/: main.rs
getting_dirty/: Cargo.toml
getting_dirty/src/: message_passing.rs  panicing_threads.rs
rust_colored/: Cargo.toml
rust_colored/src/: main.rs
rust_module_system/: Cargo.toml
rust_module_system/src/: macros.rs  main.rs  module_demo.rs
rust_test_adder/: Cargo.toml
rust_test_adder/src/: lib.rs
rust_tool_chain/: Cargo.toml
rust_tool_chain/src/: bin.rs  lib.rs
rust_trait_system/: Cargo.toml
rust_trait_system/src/: pattern_matching.rs  trait_system.rs
